2010-02-14  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* commands/i386/pc/play.c (T_REST, T_FINE, struct note, beep_on): Use
	grub_uint16_t instead of short.
	(grub_cmd_play): Use grub_uint32_t instead of int, convert data from
	disk from little endian to cpu endianness.

2010-02-07  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* commands/i386/pc/play.c (BASE_TEMPO): Set to 60 *
	GRUB_TICKS_PER_SECOND instead of 120.

2010-02-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* term/ieee1275/ofconsole.c (grub_ofconsole_readkey): Wait for possible
	escape sequence after \e.

2010-02-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* term/ieee1275/ofconsole.c (grub_ofconsole_putchar): Don't output
	non-ASCII characters.

2010-02-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkconfig_lib.in (prepare_grub_to_access_device): Enclose
	set root in single quotes to prevent \, from being unescaped.

2010-02-14  Vladimir Serbinenko  <phcoder@gmail.com>

	Prevent unknown commands from stopping menuentry execution.

	* script/execute.c (grub_script_execute_cmdline): Print error after
	unknown command.

2010-02-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* fs/i386/pc/pxe.c (GRUB_MOD_INIT): Fix typo.
	Reported by: Pavel Pisa.

2010-02-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* io/gzio.c (grub_gzio_open): Use grub_zalloc.

2010-02-13  Vladimir Serbinenko  <phcoder@gmail.com>

	Merge grub_ieee1275_map_physical into grub_map and rename to
	grub_ieee1275_map

	* include/grub/ieee1275/ieee1275.h (grub_ieee1275_map): New proto.
	* include/grub/sparc64/ieee1275/ieee1275.h (grub_ieee1275_map_physical):
	Remove.
	* kern/ieee1275/openfw.c (grub_map): Rename to ...
	(grub_ieee1275_map): ... this. All users updated. Add phys_lo when
	necessary.
	* kern/sparc64/ieee1275/ieee1275.c (grub_ieee1275_map_physical): Remove.

2010-02-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* disk/ieee1275/ofdisk.c (grub_ofdisk_open): Check device type before